[package]
name = "nimbus"
authors = ["Khaidar Kairbek", "Bishal Khadka"]
version = "0.1.0"
edition = "2021"
about = "Command line application for client- and server-side VPN communication"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
libc =  "0.2.155"
mio = {version = "1", features = ["os-poll", "os-ext", "net"]}
num-bigint = {version = "0.4", features = ["serde"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0"
chacha20poly1305 = "0.10.0"
rand = "0.8.0"
nix = { version = "=0.29.0", features = ["ioctl"] }
anyhow = "1.0.86"
thiserror = "1.0"